--- a/configs/polybar/config.ini
+++ b/configs/polybar/config.ini
@@ -17,13 +17,44 @@
 ;==========================================================
 
 [colors]
-background = #151f21
-background-alt = #373B41
-foreground = #C5C8C6
+; background = #151f21
+; background-alt = #373B41
+; foreground = #C5C8C6
 primary = #F0C674
 secondary = #8ABEB7
-alert = #A54242
+alert = ${xrdb:color1:#c34043}
 disabled = #707880
+
+; special
+foreground = ${xrdb:foreground:#dcd7ba}
+background = ${xrdb:background:#1f1f28}
+; *.cursorColor:  #dcd7ba
+
+; black
+black = ${xrdb:color0:#090618}
+grey = ${xrdb:color8:#727169}
+; red
+red = ${xrdb:color1:#c34043}
+red-alt = ${xrdb:color9:#e82424}
+; green
+green = ${xrdb:color2:#76946a}
+green-alt = ${xrdb:color10:#98bb6c}
+; yellow
+yellow = ${xrdb:color3:#c0a36e}
+yellow-alt = ${xrdb:color11:#e6c384}
+; blue
+blue = ${xrdb:color4:#7e9cd8}
+blue-alt = ${xrdb:color12:#7fb4ca}
+; magenta
+magenta = ${xrdb:color5:#957fb8}
+magenta-alt = ${xrdb:color13:#938aa9}
+; cyan
+cyan = ${xrdb:color6:#6a9589}
+cyan-alt = ${xrdb:color14:#7aa89f}
+; white
+white = ${xrdb:color15:#dcd7ba}
+white-alt = ${xrdb:color7:#c8c093}
+
 
 ; =====================================
 ;  Bars definitions
@@ -39,7 +70,11 @@ foreground = ${colors.foreground}
 
 line-size = 3pt
 
-border-size = 4pt
+border-right-size = 4pt
+border-left-size = 4pt
+border-top-size = 4pt
+border-bottom-size = 0pt
+
 border-color = #00000000
 
 padding-left = 0
@@ -48,7 +83,7 @@ padding-right = 1
 module-margin = 1
 
 separator = |
-separator-foreground = ${colors.disabled}
+separator-foreground = ${colors.cyan}
 
 font-0 = "Iosevka:size=10;2"
 font-1 = "FiraMonoNerdFont:size=12;3"
@@ -70,7 +105,7 @@ tray-detached = false
 tray-offset-x = 0
 tray-offset-y = 0
 tray-scale = 1
-tray-background = ${color.backgound}
+tray-background = ${colors.backgound}
 
 modules-left = i3 xwindow
 modules-right = memory cpu pulseaudio weather date
@@ -113,37 +148,29 @@ reverse-scroll = false
 format = <label-state> <label-mode>
 
 label-focused = %index%
-label-focused-foreground = ${color.secondary}
-label-focused-background = ${xrdb:color4:#222}
+label-focused-foreground = ${colors.white}
+label-focused-background = ${colors.blue}
 label-focused-padding = 1
 
 label-unfocused = %index%
-label-unfocused-foreground = ${color.foreground}
-label-unfocused-background = ${color.background}
+label-unfocused-foreground = ${colors.white}
+label-unfocused-background = ${colors.background}
 label-unfocused-padding = 1
 
 label-visible = %index%
-label-visible-foreground = ${color.secondary}
-label-visible-background = ${xrdb:color2:#222}
+label-visible-foreground = ${colors.white}
+label-visible-background = ${colors.green}
 label-visible-padding = 1
 
-; label-mode = %mode%
-; label-mode-padding = 1
-; label-mode-background = ${xrdb:color3:#222}
-; label-mode-foreground = ${color.background}
-
 label-urgent = %index%
-label-urgent-foreground = ${color.secondary}
-label-urgent-background = ${color.alert}
+label-urgent-foreground = ${colors.white}
+label-urgent-background = ${colors.red}
 label-urgent-padding = 1
-
-; label-separator = |
-; label-separator-padding = 0
-; label-separator-foreground = ${color.backgound}
 
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:60:...%
+format-foreground = ${colors.white}
 
 [module/filesystem]
 type = internal/fs
@@ -151,7 +178,7 @@ interval = 25
 
 mount-0 = /
 
-label-mounted = %{F#F0C674}MNT %mountpoint%%{F-} %free%%{F#F0C674}/%{F-}%total%
+label-mounted = %{F#e6c384}MNT %mountpoint%%{F-} %free%%{F#e6c384}/%{F-}%total%
 
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
@@ -177,8 +204,8 @@ exec = "sh ~/.config/polybar/scripts/weather.sh"
 format-prefix = "TEMP "
 format-prefix-foreground = ${colors.primary}
 
-format-background = ${color.background}
-format-foreground = ${color.foreground}
+format-background = ${colors.background}
+format-foreground = ${colors.foreground}
 
 tail = false
 interval = 600
@@ -214,17 +241,17 @@ type = internal/network
 interval = 5
 format-connected = <label-connected>
 format-disconnected = <label-disconnected>
-label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
+label-disconnected = %{F#e6c384}%ifname%%{F#707880} disconnected
 
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
+label-connected = %{F#e6c384}%ifname%%{F-} %essid% %local_ip%
 
 [module/eth]
 inherit = network-base
 interface-type = wired
-label-connected = %{F#F0C674}%ifname%%{F-} | %{F#F0C674}UP%{F-} %upspeed% %{F#F0C674}DOWN%{F-} %downspeed% %{F#F0C674}NET%{F-} %netspeed%
+label-connected = %{F#e6c384}%ifname%%{F-} %{F#6a9589}|%{F-} %{F#e6c384}UP%{F-} %upspeed% %{F#e6c384}DOWN%{F-} %downspeed% %{F#e6c384}NET%{F-} %netspeed%
 
 [module/date]
 type = internal/date
