--- a/configs/i3/config
+++ b/configs/i3/config
@@ -152,6 +152,7 @@ bindsym $mod+Shift+0 move container to workspace number $ws10
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id nm-applet
 # exec --no-startup-id wal -R
+exec --no-startup-id feh --bg-fill ~/Pictures/Wallpapers/center.jpg ~/Pictures/Wallpapers/right.jpg ~/Pictures/Wallpapers/left.jpg
 exec --no-startup-id $HOME/.config/i3/scripts/mouse_accel.sh
 # exec --no-startup-id "dbus-update-activation-environment --all && gnome-keyring-daemon --start --components=pkcs11,secrets"
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
@@ -163,7 +164,7 @@ exec_always --no-startup-id xset fp rehash
 # ===========================================
 # Gaps
 # ===========================================
-gaps inner 8
+gaps inner 6
 gaps outer 0
 
 default_border pixel 1
