--- a/configs/i3/config
+++ b/configs/i3/config
@@ -26,7 +26,7 @@ floating_modifier $mod
 # ===========================================
 bindsym $mod+Return exec alacritty
 # bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+d exec --no-startup-id "rofi -modi drun,run,window,ssh -show drun -show-icons -drun-icon-theme -lines 20 -padding 25 -width 30 -columns 1"
+bindsym $mod+d exec --no-startup-id "rofi -show drun"
 bindsym $mod+Shift+q kill
 
 # Audio
