--- a/configs/polybar/config.ini
+++ b/configs/polybar/config.ini
@@ -257,8 +257,8 @@ label-connected = %{F#e6c384}%ifname%%{F-} %{F#6a9589}|%{F-} %{F#e6c384}UP%{F-} 
 type = internal/date
 interval = 1
 
-date = %H:%M
-date-alt = %Y-%m-%d %H:%M:%S
+date = %d/%m %H:%M
+date-alt = %d/%m/%Y %H:%M:%S
 
 label = %date%
 label-foreground = ${colors.primary}
