--- a/configs/tmuxinator/flowtify.yml
+++ b/configs/tmuxinator/flowtify.yml
@@ -7,26 +7,38 @@ windows:
   - frontend-editor:
       root: ~/programations/granter/flowtify/frontend/flowtify-frontend
       panes:
-        - nvim .
+        - nvim:
+          - nix develop
+          - nvim .
 
   - frontend-term:
       root: ~/programations/granter/flowtify/frontend/flowtify-frontend
       layout: even-horizontal
       panes:
-        - yarn dev --port 3001
-        - git status
+        - yarn: 
+          - nix develop
+          - yarn dev --port 3001
+        - git:
+          - nix develop
+          - git status
 
   - backend-editor:
       root: ~/programations/granter/flowtify/backend/flowtify-backend
       panes:
-        - nvim .
+        - nvim:
+          - nix develop
+          - nvim .
 
   - backend-term:
       root: ~/programations/granter/flowtify/backend/flowtify-backend
       layout: even-horizontal
       panes:
-        - MIX_ENV=dev mix phx.server
-        - git status
+        - phx_server:
+          - nix develop
+          - MIX_ENV=dev mix phx.server
+        - git:
+          - nix develop
+          - git status
 
   - granter-tools-editor:
       root: ~/programations/granter/flowtify/frontend/granter-tools
