better notifications center

--- a/configs/polybar/config.ini
+++ b/configs/polybar/config.ini
@@ -108,7 +108,7 @@ tray-scale = 1
 tray-background = ${colors.backgound}
 
 modules-left = i3 xwindow
-modules-right = memory cpu pulseaudio weather date
+modules-right = memory cpu pulseaudio weather notifications date
 
 [bar/left]
 inherit = bar/base
@@ -262,6 +262,15 @@ date-alt = %d/%m/%Y %H:%M:%S
 
 label = %date%
 label-foreground = ${colors.primary}
+
+[module/notifications]
+type = custom/script
+
+label = "%output%"
+exec = "sh ~/.config/polybar/scripts/check_notifications.sh"
+interval = 1
+
+click-left = "eww open --toggle --config ~/.config/eww/notifications notification_history"
 
 [settings]
 screenchange-reload = true
