more notifications center

--- a/configs/polybar/config.ini
+++ b/configs/polybar/config.ini
@@ -270,7 +270,7 @@ label = "%output%"
 exec = "sh ~/.config/polybar/scripts/check_notifications.sh"
 interval = 1
 
-click-left = "eww open --toggle --config ~/.config/eww/notifications notification_history"
+click-left = "notifdctl set-notifications-read; eww open --toggle --config ~/.config/eww/notifications notification_history"
 
 [settings]
 screenchange-reload = true
