update lsp conf, i3 and packages

--- a/configs/i3/config
+++ b/configs/i3/config
@@ -211,6 +211,7 @@ for_window [class="Gnome-calendar"] floating enable
 for_window [title="About Mozilla Firefox"] floating enable
 for_window [title="Android Emulator*"] floating enable
 for_window [class="battle.net.exe"] floating enable
+for_window [class="gnome-calendar"] floating enable
 
 
 # ===========================================
