update packages and other things

--- a/configs/polybar/config.ini
+++ b/configs/polybar/config.ini
@@ -99,16 +99,8 @@ override-redirect = false
 [bar/center]
 inherit = bar/base
 
-tray-position = right
-tray-padding = 2
-tray-detached = false
-tray-offset-x = 0
-tray-offset-y = 0
-tray-scale = 1
-tray-background = ${colors.backgound}
-
 modules-left = i3 xwindow
-modules-right = memory cpu pulseaudio weather notifications date
+modules-right = memory cpu pulseaudio weather notifications date systray
 
 [bar/left]
 inherit = bar/base
@@ -130,7 +122,7 @@ modules-right = date
 type = internal/tray
 
 format-margin = 8pt
-tray-spacing = 16pt
+tray-spacing = 4pt
 
 [module/i3]
 type = internal/i3
