--- a/configs/tmuxinator/flowtify.yml
+++ b/configs/tmuxinator/flowtify.yml
@@ -26,7 +26,7 @@ windows:
       root: ~/programations/granter/flowtify/backend/flowtify-backend
       panes:
         - nvim:
-          - nix develop
+          - nix develop .#test
           - nvim .
 
   - backend-term:
@@ -37,7 +37,7 @@ windows:
           - nix develop
           - MIX_ENV=dev mix phx.server
         - git:
-          - nix develop
+          - nix develop .#test
           - git status
 
   - granter-tools-editor:
@@ -52,4 +52,19 @@ windows:
         - yarn dev
         - git status
 
+  - infra-editor:
+      root: ~/programations/granter/flowtify/infra/
+      panes:
+        - nix develop
+        - nvim .
+
+  - infra-term:
+      root: ~/programations/granter/flowtify/infra/
+      layout: even-horizontal
+      panes:
+        - term:
+          - nix develop
+        - git:
+          - nix develop
+          - git status
 
