--- a/configs/waybar/config
+++ b/configs/waybar/config
@@ -1,15 +1,10 @@
-{
+[{
     "layer": "top",
     "position": "top",
     "margin-top": 6,
+    "output": "DP-4",
     "modules-left": ["hyprland/workspaces", "hyprland/window"],
-    "modules-right": ["network", "pulseaudio", "clock", "tray"],
-
-    "battery": {
-        "format": "{icon}  {capacity}%",
-        "format-charging": "󰂄  {capacity}%",
-        "format-icons": ["󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"],
-    },
+    "modules-right": ["pulseaudio", "clock", "tray"],
 
     "clock": {
         "format": "󰥔   {:%H:%M %p}",
@@ -34,17 +29,6 @@
         },
     },
 
-    "network": {
-        "interface": "eno1",
-        "format": "{ifname}",
-        "format-wifi": "{icon}   {essid}",
-        "format-ethernet": "󰈀  {ifname} - 󰇚 {bandwidthDownBytes}  󰕒 {bandwidthUpBytes}",
-        "format-disconnected": "󰤭   disconnected",
-        "max-length": 50,
-        "interval": 10,
-        "format-icons": ["󰤯", "󰤟", "󰤢", "󰤥", "󰤨"]
-    },
-    
     "hyprland/workspaces": {
         "format": "{icon}",
         "on-click": "activate",
@@ -75,14 +59,108 @@
         "icon-size": 14
     },
 
-    "backlight": {
-        "device": "intel_backlight",
-        "format": "{icon}   {percent}%",
-        "format-icons": ["󰃞", "󰃟", "󰃠"]
-    },
-
     "tray": {
         "icon-size": 21,
         "spacing": 10
     }
-}
+}, {
+    "layer": "top",
+    "position": "top",
+    "margin-top": 6,
+    "output": "DP-3",
+    "modules-left": ["hyprland/workspaces", "hyprland/window"],
+    "modules-right": ["cpu", "memory", "disk", "network"],
+
+    "cpu": {
+        "interval": 10,
+        "format": "  {}%",
+    },
+
+    "memory": {
+        "interval": 10,
+        "format": "  {used:0.1f}G/{total:0.1f}G",
+    },
+
+    "disk": {
+        "interval": 10,
+        "format": "  {used}/{total}",
+        "path": "/"
+    },
+
+    "network": {
+        "interface": "eno1",
+        "format": "{ifname}",
+        "format-wifi": "{icon}   {essid}",
+        "format-ethernet": "󰈀  {ifname} - 󰇚 {bandwidthDownBytes}  󰕒 {bandwidthUpBytes}",
+        "format-disconnected": "󰤭   disconnected",
+        "max-length": 50,
+        "interval": 10,
+        "format-icons": ["󰤯", "󰤟", "󰤢", "󰤥", "󰤨"]
+    },
+
+    "hyprland/workspaces": {
+        "format": "{icon}",
+        "on-click": "activate",
+        "format-icons": {
+            "1": "1",
+            "2": "2",
+            "3": "3",
+            "4": "4",
+            "5": "5",
+            "6": "6",
+            "7": "7",
+            "8": "8",
+            "9": "9",
+            "10": "10",
+        },
+        "sort-by-number": true,
+        "persistent-workspaces": {
+            "DP-3": [ 1, 3 ],
+            "DP-4": [ 2, 4 ],
+            "DP-2": [ 6 ]
+        }
+    },
+
+    "hyprland/window": {
+        "format": "{title}",
+        "separate-outputs": true,
+        "icon": true,
+        "icon-size": 14
+    }
+}, {
+    "layer": "top",
+    "position": "top",
+    "margin-top": 6,
+    "output": "DP-2",
+    "modules-left": ["hyprland/workspaces", "hyprland/window"],
+
+    "hyprland/workspaces": {
+        "format": "{icon}",
+        "on-click": "activate",
+        "format-icons": {
+            "1": "1",
+            "2": "2",
+            "3": "3",
+            "4": "4",
+            "5": "5",
+            "6": "6",
+            "7": "7",
+            "8": "8",
+            "9": "9",
+            "10": "10",
+        },
+        "sort-by-number": true,
+        "persistent-workspaces": {
+            "DP-3": [ 1, 3 ],
+            "DP-4": [ 2, 4 ],
+            "DP-2": [ 6 ]
+        }
+    },
+
+    "hyprland/window": {
+        "format": "{title}",
+        "separate-outputs": true,
+        "icon": true,
+        "icon-size": 14
+    }
+}]
