--- a/configs/tmuxinator/inova-defesa.yml
+++ b/configs/tmuxinator/inova-defesa.yml
@@ -11,17 +11,6 @@ windows:
           - nix develop
           - nvim
 
-  - frontend-term:
-      root: ~/programations/granter/inova-defesa/frontend/inova-frontend
-      layout: even-horizontal
-      panes:
-        - yarn: 
-          - nix develop
-          - yarn dev
-        - git:
-          - nix develop
-          - git status
-
   - backend-editor:
       root: ~/programations/granter/inova-defesa/backend/inova-backend
       panes:
@@ -29,16 +18,54 @@ windows:
           - nix develop .#test
           - nvim
 
-  - backend-term:
-      root: ~/programations/granter/inova-defesa/backend/inova-backend
-      layout: even-horizontal
+  - teminals:
+      layout: tiled
       panes:
-        - phx_server:
+        - frontend-git:
+          - cd ./frontend/inova-frontend
           - nix develop
-          - MIX_ENV=dev mix phx.server
-        - git:
-          - nix develop .#test
           - git status
+        - frontend-yarn: 
+          - cd ./frontend/inova-frontend
+          - nix develop
+          - yarn dev
+        - backend-git:
+          - cd ./backend/inova-backend
+          - nix develop
+          - git status
+        - backend-phx:
+          - cd ./backend/inova-backend
+          - nix develop
+          - LOCAL_EMAIL=1 MIX_ENV=dev mix phx.server
+
+  # - frontend-term:
+  #     root: ~/programations/granter/inova-defesa/frontend/inova-frontend
+  #     layout: even-horizontal
+  #     panes:
+  #       - yarn: 
+  #         - nix develop
+  #         - yarn dev
+  #       - git:
+  #         - nix develop
+  #         - git status
+  #
+  # - backend-editor:
+  #     root: ~/programations/granter/inova-defesa/backend/inova-backend
+  #     panes:
+  #       - nvim:
+  #         - nix develop .#test
+  #         - nvim
+  #
+  # - backend-term:
+  #     root: ~/programations/granter/inova-defesa/backend/inova-backend
+  #     layout: even-horizontal
+  #     panes:
+  #       - phx_server:
+  #         - nix develop
+  #         - MIX_ENV=dev mix phx.server
+  #       - git:
+  #         - nix develop .#test
+  #         - git status
 
   - infra-editor:
       root: ~/programations/granter/inova-defesa/infra/inova-infra
