--- a/configs/polybar/config.ini
+++ b/configs/polybar/config.ini
@@ -100,7 +100,7 @@ override-redirect = false
 inherit = bar/base
 
 modules-left = i3 xwindow
-modules-right = memory cpu pulseaudio weather notifications date systray
+modules-right = memory cpu pulseaudio weather date systray
 
 [bar/left]
 inherit = bar/base
