--- a/configs/i3/config
+++ b/configs/i3/config
@@ -24,7 +24,7 @@ floating_modifier $mod
 # ===========================================
 # Key Bindings
 # ===========================================
-bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec kitty
 # bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+d exec --no-startup-id "rofi -show drun"
 bindsym $mod+Shift+q kill
